--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-fast-marquee": "^1.6.3",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "stripe": "^14.13.0",
