--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "stripe": "^14.13.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
